# FarPico

./: .gitignore  Cargo.toml  LICENSE  README.md
farpi_macros_lib/: Cargo.toml
farpi_macros_lib/src/: lib.rs
src/: crawl.rs  example_hal.rs  far_pico.rs  hal.rs  hal_console.rs  hal_gpio.rs  main.rs
static/: index.html  skuttle_index.html
static/core/: farpi-http.js  farpi.js  farpi_camera.js  farpi_consoles.js  farpi_gamepad.js  farpi_indicators.js  farpi_layout.js  farpi_streams.js  farpi_switches.js
static/demo/: index.html
static/demo/css/: Abel.css  farpi.css
static/skuttle/: README.md  index.html
static/skuttle/css/: skuttle.css
