[package]
name = "FarPico"
version = "0.1.0"
edition = "2021"

[dependencies]
# Postcard for (de)serialsing JSON
postcard = "1.0.0"
# Disable default-features to support no-std targets
serde = { version = "1.0.*", default-features = false }

rust-embed = "6.6.1"

[profile.release]
# All settings to reduce size of the binary for embedded usage.
# Might be overkill, probably dominated by the size of the static assets
strip = true
codegen-units = 1
lto = true
opt-level = "z"
