[package]
name = "FarPico"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version="1.0.163", features = ["derive"] }
serde_json = "1.0.96"
rust-embed = "6.6.1"

[profile.release]
# All settings to reduce size of the binary for embedded usage.
# Might be overkill, probably dominated by the size of the static assets.
# Will need to see if I need to care more about RAM constraints
strip = true
codegen-units = 1
lto = true
opt-level = "z"
